--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,15 @@
 			<artifactId>spring-boot-starter-mail</artifactId>
 			<version>3.3.5</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
